--- a/IMPLANTAÇÃO DE SISTEMA WEB/index.html
+++ b/IMPLANTAÇÃO DE SISTEMA WEB/index.html
@@ -1,27 +1,83 @@
-<html>
+<!DOCTYPE html>
+
 <head>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>chinchilas</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Bem-vindo!</h1> 
-            <img src="alex poatan.webdp" alt="Alex Poatinho">
-            </header>
-            <main>
-            <h2>Quem é alex poatan?</h2>
-            <p>Alex Sandro Silva Pereira, também conhecido como Alex Poatan é um lutador brasileiro profissional de artes marciais mistas e ex-lutador de Kickboxing. Foi duplo campeão mundial de Kickboxing pelo Glory, e duplo campeão mundial de MMA pelo UFC.</p>
-            <h2>Quantas lutas poatan tem?</h2>
-            <p>Poatan tem 14 luas,12 vitorias e 2 derrotas no UFC.</p>
-            </main>
-            <footer>
-           <p>Informações sobre poatan</p>     
-    </body>
-    </html> 
+  <meta charset="UTF-8">
+  <title>título da página</title>
+  <link href="styles.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
-</html>
+
+<body>
+
+  <main>
+    <div class="container">
+
+
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/unnamed.jpg" class="d-block w-100" alt="Logo da UFC">
+          </div>
+          <div class="carousel-item">
+            <img src="img/download.jfif" class="d-block w-100"
+              alt="Poatan fazendo a entrada do arco e flecha">
+          </div>
+          <div class="carousel-item">
+            <img src="img/maxresdefault.jpg" class="d-block w-100" alt="Diego Lopes lutando">
+          </div>
+          <div class="carousel-item">
+            <img src="img/130424-renato-moicano-br-ufc-300-GettyImages-2148548779.jpeg" class="d-block w-100" alt="Renato Moicano comemorando vitória">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <header>
+      <h2><p>Brasileiros no UFC</p></h2>
+    </header>
+    <div class="container">
+      <h3> </h3>
+      <p>Atualmente, o Brasil continua a ser uma força dominante no UFC, com vários lutadores se destacando em diversas categorias de peso. Os atletas brasileiros são conhecidos por sua versatilidade, combinando técnicas como jiu-jitsu, muay thai e boxe, o que os torna extremamente competitivos no octógono. Alguns deles têm se mantido no topo dos rankings, disputando e defendendo cinturões em competições acirradas. Além disso, a nova geração de lutadores brasileiros tem demonstrado um espírito incansável, sempre buscando o nocaute ou a submissão. Com performances impressionantes, eles continuam a representar o país com orgulho, reforçando o legado do Brasil no cenário das artes marciais mistas.</p>
+      <h3> Dito isso, aqui está 3 deles:</h3>
+
+      <p>Alex Poatan</p>
+      <p></p>
+      <p></p>
+      <div class="card" style="width: 18rem;">
+        <img src="img/download.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Poatan</h5>
+          <p class="card-text">Poatan está em 2 lugar na colocação peso-por-peso do UFC,sendo não só um dos melhores lutadores brasileiros, mas tambem do mundo.Poatan é atual campeão da categoria peso meio pesado, sendo um striker conhecido pelo seu infame cruzado de esquerda que garante nocautes e vitorias para sua conta.</p>
+        </div>
+      </div>
+      <p>Diego Lopes</p>
+      <p></p>
+      <p></p>
+      <div class="card" style="width: 18rem;">
+        <img src="img/maxresdefault.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Diego Lopes</h5>
+          <p class="card-text">Diego Lopes é um lutador mexicano-brasileiro de artes marciais mistas que vem ganhando destaque no UFC. Especialista em jiu-jitsu, ele é conhecido por sua habilidade técnica e capacidade de adaptação no octógono. Lopes começou a sua carreira no MMA em circuitos menores, onde construiu um cartel sólido, antes de ser contratado pelo UFC.</p>
+        </div>
+      </div>
+      <p>Renato Moicano</p>
+      <p></p>
+      <p></p>
+      <div class="card" style="width: 18rem;">
+        <img src="img/130424-renato-moicano-br-ufc-300-GettyImages-2148548779.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Renato Moicano</h5>
+          <p class="card-text">Renato Moicano é um lutador brasileiro de MMA que compete na divisão peso-leve do UFC, conhecido por sua técnica afiada no jiu-jitsu e pela sua capacidade de adaptação nas lutas. Moicano começou sua carreira no MMA como especialista em grappling, mas ao longo do tempo desenvolveu um striking sólido, tornando-se um atleta versátil.</p>
+        </div>
+      </div>
